Added various weather forecasts for current location

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
 
     <h1 class="userCity"></h1>
-
-
+    <h3 class="userTemp"></h3>
+    <h3 class="userWind"></h3>
+    <h3 class="userHumidity"></h3>
+    <h3 class="userWeatherCode"></h3>
 
     <!-- Day.js -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
