Added date selector

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <h1 class="userCity"></h1>
+    <h3 class="userDate"></h3>
     <h3 class="userTemp"></h3>
     <h3 class="userWind"></h3>
     <h3 class="userHumidity"></h3>
